--- a/app/scss/SpeakerTile.scss
+++ b/app/scss/SpeakerTile.scss
@@ -1,5 +1,6 @@
 @import './Main.scss';
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400|Roboto:300,400);
+@import './_common.scss';
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:300,400);
 
 /*
 TODO:
@@ -53,15 +54,18 @@ $tileBorderRadius: 6px;
   &:focus .speaker-img:before {
     display: block;
     transition: all .6s;
+    -webkit-filter: grayscale(0%);
+    -webkit-transition: .5s ease-in-out;
   }
 
   &:hover .speaker-img {
     transform: scale(1.1);
-    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    -webkit-transition: .5s ease-in-out;
   }
 
   p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', serif;
     font-weight: 400;
     position: relative;
     color: $FSBlue;
@@ -70,21 +74,22 @@ $tileBorderRadius: 6px;
   }
 
   .speaker-name {
-    font-size: 20px;
+    color: $blue;
+    font-size: 22px;
+    font-weight: bold;
   }
 
   .speaker-title {
-    font-size: 15px;
+    color: #49575C;
+    font-size: 17px;
   }
 }
 
 .speaker-tile {
   position: relative;
-  float: left;
   width: 100%;
   height: auto;
   padding-bottom: 100%;
-  background-color: gray;/*$bgcolor;*/
   overflow: hidden;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
@@ -96,11 +101,11 @@ $tileBorderRadius: 6px;
     bottom: 0;
     left: 0;
     right: 0;
-    max-width: 400px;
-    max-height: 400px;
+    width: 100%;
+    height: 100%;
     background-color: none;
     background-size: cover !important;
-    background-position: 50% 35% !important;
+    background-position: center !important;
     background-repeat: no-repeat !important;
     transform: scale(1);
     transition: all .6s;
